<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_go_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/action_go_home"
        android:showAsAction="ifRoom" />
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh_white"
        android:title="@string/action_refresh"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_websearch"
        android:icon="@drawable/action_search"
        android:title="@string/action_websearch"
        android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />
</menu>
